force-app/main/default/objects/TLO_Contact__c/TLO_Contact__c.object-meta.xml
<CustomObject>
    <label>TLO Contact</label>
    <nameField>
        <label>Display Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TLO Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>