force-app/main/default/objects/TLO_Contact__c/fields/ActiveKerb__c.field-meta.xml
<CustomField>
    <fullName>ActiveKerb__c</fullName>
    <formula>OR(MoiraStatus__c == &apos;1&apos;,  MoiraStatus__c == &apos;9&apos;)</formula>
    <label>Active Kerb?</label>
    <type>Checkbox</type>
</CustomField>