force-app/main/default/objects/TLO_Contact__c/fields/AltEmail__c.field-meta.xml
<CustomField>
    <fullName>AltEmail__c</fullName>
    <label>Alternative Email</label>
    <type>Email</type>
</CustomField>