force-app/main/default/objects/TLO_Contact__c/fields/AltPhone__c.field-meta.xml
<CustomField>
    <fullName>AltPhone__c</fullName>
    <label>Alternative Phone</label>
    <type>Phone</type>
</CustomField>