force-app/main/default/objects/TLO_Contact__c/fields/Birthday__c.field-meta.xml
<CustomField>
    <fullName>Birthday__c</fullName>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>