force-app/main/default/objects/TLO_Contact__c/fields/CountryOfCitizenship__c.field-meta.xml
<CustomField>
    <fullName>CountryOfCitizenship__c</fullName>
    <label>Country of Citizenship</label>
    <length>30</length>
    <type>Text</type>
</CustomField>