force-app/main/default/objects/TLO_Contact__c/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <formula>TRIM( LegalGivenName__c + &apos; &apos; +  LegalMiddleName__c + &apos; &apos; +  LegalLastName__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>