force-app/main/default/objects/TLO_Contact__c/fields/Government_Agency_Name__c.field-meta.xml
<CustomField>
    <fullName>Government_Agency_Name__c</fullName>
    <label>Government Agency Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>