force-app/main/default/objects/TLO_Contact__c/fields/GuestAccountNeeded__c.field-meta.xml
<CustomField>
    <fullName>GuestAccountNeeded__c</fullName>
    <label>Guest Account Needed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Y_N_U</valueSetName>
    </valueSet>
</CustomField>