force-app/main/default/objects/TLO_Contact__c/fields/KerbName__c.field-meta.xml
<CustomField>
    <fullName>KerbName__c</fullName>
    <label>Kerb Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>