force-app/main/default/objects/TLO_Contact__c/fields/LegalGivenName__c.field-meta.xml
<CustomField>
    <fullName>LegalGivenName__c</fullName>
    <label>Legal Given Name</label>
    <length>29</length>
    <type>Text</type>
</CustomField>