force-app/main/default/objects/TLO_Contact__c/fields/LegalLastName__c.field-meta.xml
<CustomField>
    <fullName>LegalLastName__c</fullName>
    <label>Legal Last Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>