force-app/main/default/objects/TLO_Contact__c/fields/LegalMiddleName__c.field-meta.xml
<CustomField>
    <fullName>LegalMiddleName__c</fullName>
    <label>Legal Middle Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>