force-app/main/default/objects/TLO_Contact__c/fields/Person_Account__c.field-meta.xml
<CustomField>
    <fullName>Person_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Person Account that replaces this TLO Contact</description>
    <label>Person Account</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The linked Account has to be a Person Account</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Person Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>TLO Contacts</relationshipLabel>
    <relationshipName>TLO_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>