force-app/main/default/objects/TLO_Contact__c/fields/VaAppointment__c.field-meta.xml
<CustomField>
    <fullName>VaAppointment__c</fullName>
    <label>WOC or DAP appointment with VA?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Y_N_U</valueSetName>
    </valueSet>
</CustomField>